Project

General

Profile

Actions

Bug #36221

closed

mds: rctime not set on system inode (root) at startup

Added by Patrick Donnelly over 5 years ago. Updated over 5 years ago.

Status:
Resolved
Priority:
High
Category:
-
Target version:
% Done:

0%

Source:
Development
Tags:
Backport:
mimic,luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
MDS
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

pdonnell@senta02 ~/mnt/tmp.gh651ZmDf8$ cd /home/pdonnell/mnt/tmp.P8Kd5vSfhc
pdonnell@senta02 ~/mnt/tmp.P8Kd5vSfhc$ ls -ltac
total 5
drwxr-x--- 21 pdonnell pdonnell 4096 Sep 26 14:12 ..
drwxr-xr-x  2 pdonnell pdonnell    0 Sep 26 14:12 .
pdonnell@senta02 ~/mnt/tmp.P8Kd5vSfhc$ date +%s;find -type d -execdir getfattr -n ceph.dir.rctime {} +
1537985568
# file: .
ceph.dir.rctime="0.090" 

(I haven't yet figured out where this 0.09 comes from; why is it not 0.0?)


Related issues 2 (0 open2 closed)

Copied to CephFS - Backport #36460: luminous: mds: rctime not set on system inode (root) at startupResolvedNathan CutlerActions
Copied to CephFS - Backport #36461: mimic: mds: rctime not set on system inode (root) at startupResolvedNathan CutlerActions
Actions #1

Updated by Patrick Donnelly over 5 years ago

  • Subject changed from mds: rctime/ctime not set on system inode (root) at startup to mds: rctime not set on system inode (root) at startup
Actions #3

Updated by Patrick Donnelly over 5 years ago

  • Status changed from In Progress to Fix Under Review
Actions #4

Updated by Patrick Donnelly over 5 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #5

Updated by Nathan Cutler over 5 years ago

  • Copied to Backport #36460: luminous: mds: rctime not set on system inode (root) at startup added
Actions #6

Updated by Nathan Cutler over 5 years ago

  • Copied to Backport #36461: mimic: mds: rctime not set on system inode (root) at startup added
Actions #7

Updated by Patrick Donnelly over 5 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF